--- a/src/question-bank.html
+++ b/src/question-bank.html
@@ -1,163 +1,243 @@
-<html>
-    <head>
-        <style>
-            body {
-                font-family: arial;
-            }
-            tr {
-                display: flex;
-            }
-            th {
-                width: 20%;
-                border: 1px solid #777;
-                padding: 10px;
-                background-color: cornsilk;
-            }
-            td {
-                width: 20%;
-                border: 1px solid #777;
-                padding: 10px;
-                overflow: scroll;
-            }
-            tr:nth-of-type(even) {
-                background: #efefef;
-            }
-        </style>
-    </head>
-    <body>
-        <h1>Magic Question Machine</h1>
-        <div id="view">
-            <p>No Question Displayed Currently.</p>
-        </div>
-        <h2>Add a Question</h2>
-        <form id="questionForm">
-            <label for="qtitle">Question Title</label>
-            <input type="text" name="qtitle" id="qtitle">
-            <br>
-            <label for="qdesc">Question Description</label>
-            <textarea type="text" name="qdesc" id="qdesc"></textarea>
-            <br>
-            <label for="qcategory">Question Category</label>
-            <input type="text" name="qcategory" id="qcategory">
-            <br>
-            <label for="qcomplexity">Question Complexity</label>
-            <select name="qcomplexity" id="qcomplexity">
-                <option value="Easy" selected>Easy</option>
-                <option value="Medium">Medium</option>
-                <option value="Hard">Hard</option>
-            </select>
-            <br>
-            <button type="submit">Save Question</button>
-        </form>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js" integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous"></script>
+    <style>
+        .question-description-id{
+        white-space:nowrap;
+        overflow:hidden;
+        text-overflow:ellipsis;
+        max-width: 300px;
+        max-height: 100px;
+        }
+
+        mark {
+        background: none;
+        }
+
+        .modal-dialog
+        {
+            background: white !important;
+        }
+    </style>
+</head>
+<body>
+    <div class="container">
+        <h1 class="mt-3">Magic Question Machine</h1>
         <hr>
-        <table id="table">
-        </table>
-        <script>
-            let questions = localStorage.getItem("qs")
+        <div class="row">
+            <div class="col-6">
+                <h2 id="title">Add a Question</h2>
+                <form id="questionForm">
+                    <label for="name" class="mb-3">Question Title :</label>
+                    <input type="text" name="name" id="qtitle" class="form-control" required>
+                    <br>
+                    <label for="description" class="mb-3">Question Description :</label>
+                    <textarea
+                        type="text"
+                        name="description"
+                        id="qdesc"
+                        class="form-control"
+                        required
+                        placeholder="Write your description in HTML..."
+                        >
+                    </textarea>
+                    <br>
+                    <label for="category" class="mb-3">Question Category :</label>
+                        <input type="text" name="category" id="qcategory" class="form-control" required>
+                    <br>
+                    <label for="complexity" class="mb-3">Question Complexity :</label>
+                    <select name="complexity" id="qcomplexity" class="form-control" required>
+                        <option value="Easy" selected>Easy</option>
+                        <option value="Medium">Medium</option>
+                        <option value="Hard">Hard</option>
+                    </select>
+                    <br>
+                    <button type="submit" class="btn btn-primary">Save Question</button>
+                </form>
+                <hr>
+                <div class="table-responsive">
+                  <table class="table table-bordered table-striped table-hover" id="table">
+                    <thead class="thead-dark">
+                      <tr>
+                        <th>Question ID</th>
+                        <th>Question Title</th>
+                        <th>Question Description</th>
+                        <th>Question Category</th>
+                        <th>Question Complexity</th>
+                        <th>Actions</th>
+                      </tr>
+                    </thead>
+                  </table>
+                  </div>
+                </div>
+                <div id="view" class="col-6">
+                </div>
+            </div>
+        </div>
+    <script>
+        let questions = localStorage.getItem("qs")
 
-            if(!questions) {
-                questions = [];
-            } else{
-                questions = JSON.parse(questions);
-            }
+        if(!questions) {
+            questions = [];
+        } else{
+            questions = JSON.parse(questions);
+        }
 
-            function saveQuestions() {
-                localStorage.setItem("qs", JSON.stringify(questions));
-            }
+        function saveQuestions() {
+            localStorage.setItem("qs", JSON.stringify(questions));
+        }
 
-            function renderItemList() {
-                const itemList = document.getElementById('table');
-                itemList.innerHTML = `
-                <thead>
+        function renderItemList() {
+            const itemList = document.getElementById('table');
+            itemList.innerHTML = `<thead class="thead-dark">
+                  <tr>
                     <th>Question ID</th>
                     <th>Question Title</th>
                     <th>Question Description</th>
                     <th>Question Category</th>
                     <th>Question Complexity</th>
                     <th>Actions</th>
-                </thead>
+                  </tr>
+                </thead>`
+            itemList.innerHTML += `<tbody>`;
+            questions.forEach((item, index) => {
+                var text = item.description.replace(/<\s*br[^>]?>/,'\n')
+                 .replace(/(<([^>]+)>)/g, "");
+                itemList.innerHTML += `
+                <tr onclick="view(${index})">
+                    <td>${index + 1}</td>
+                    <td>${item.name}</td>
+                    <td class="question-description-id">${text}</td>
+                    <td>${item.category}</td>
+                    <td>${item.complexity}</td>
+                    <td>
+                        <button class="btn btn-outline-primary" onclick="edit(${index})">Edit</button>
+                        <button class="btn btn-danger" onclick="deleteItem(${index})">Delete</button>
+                    </td>
+                <tr>
                 `;
-                console.log(questions)
-                questions.forEach((item, index) => {
-                    itemList.innerHTML += `
-                    <tr onclick="view(${index})">
-                        <td>${index + 1}</td>
-                        <td>${item.name}</td>
-                        <td class="desc">${item.description}</td>
-                        <td>${item.category}</td>
-                        <td>${item.complexity}</td>
-                        <td>
-                            <button class="btn" onclick="editItem(${index})">Edit</button>
-                            <button class="btn" onclick="deleteItem(${index})">Delete</button>
-                        </td>
-                    <tr>
-                    `;
-                });
 
-                // Save the questions to localStorage whenever the list is updated
-                saveQuestions();
-            }
+            });
+            itemList.innerHTML += `</tbody>`;
+            // Save the questions to localStorage whenever the list is updated
+            saveQuestions();
+        }
 
-            function addItem(event) {
-                event.preventDefault();
-                let itemNameInput = document.getElementById('qtitle');
-                let itemDescriptionInput = document.getElementById('qdesc');
-                let itemCategory = document.getElementById('qcategory');
-                let itemComplexity = document.getElementById('qcomplexity');
-                const newItemName = itemNameInput.value.trim();
-                const newItemDescription = itemDescriptionInput.value.trim();
-                const newItemCategory = itemCategory.value.trim();
-                const newItemComplexity = itemComplexity.value.trim();
+        function edit(index) {
+            document.getElementById('title').innerText = `Edit Question ${index + 1}`
+            var item = questions[index]
+            let itemNameInput = document.getElementById('qtitle');
+            let itemDescriptionInput = document.getElementById('qdesc');
+            let itemCategory = document.getElementById('qcategory');
+            let itemComplexity = document.getElementById('qcomplexity');
+            itemNameInput.value = item.name
+            itemDescriptionInput.value = item.description
+            itemCategory.value = item.category
+            itemComplexity.value = item.complexity
+            var form = document.getElementById('questionForm')
+            form.removeEventListener('submit', addItem)
+            form.addEventListener('submit', () => editItem(index))
+        }
 
-                if (newItemName !== '' && newItemDescription !== '') {
-                    questions.push({ name: newItemName, description: newItemDescription, category: newItemCategory, complexity: newItemComplexity });
-                    itemNameInput.value = '';
-                    itemDescriptionInput.value = '';
-                    itemCategory.value = '';
-                    itemComplexity = '';
-                    renderItemList();
+        function addItem(event) {
+            event.preventDefault();
+            let itemNameInput = document.getElementById('qtitle');
+            let itemDescriptionInput = document.getElementById('qdesc');
+            let itemCategory = document.getElementById('qcategory');
+            let itemComplexity = document.getElementById('qcomplexity');
+            const newItemName = itemNameInput.value.trim();
+            const newItemDescription = itemDescriptionInput.value;
+            const newItemCategory = itemCategory.value.trim();
+            const newItemComplexity = itemComplexity.value.trim();
+            let dup = false
+            questions.forEach((q) => {
+                if (q["name"] == newItemName) {
+                dup = true
+                return
                 }
+            })
+            if (dup) {
+                alert("Duplicate Question Title! Please try again")
+                return
             }
-
-            function view(i) {
-                const viewElem = document.getElementById('view');
-                const questionToView = questions[i];
-                viewElem.innerHTML = `
-                <h2>Current Question title: ${questionToView.name}<h4>
-                <p>Current Question description: ${questionToView.description}<p>
-                <p>Current Question Category: ${questionToView.category}<p>
-                <p>Current Question Complexity: ${questionToView.complexity}<p>
-                <p>Current Question ID: ${i + 1}<p>
-                `
-            }
-
-            function editItem(index) {
-            const updatedItemName = prompt('Edit item name:', questions[index].name);
-            const updatedItemDescription = prompt('Edit item description:', questions[index].description);
-            const updatedItemCategory = prompt('Edit item category:', questions[index].category);
-            const updatedItemComplexity = prompt('Edit item complexity', questions[index].complexity);
-
-            if (updatedItemName !== null && updatedItemDescription !== null) {
-                questions[index].name = updatedItemName;
-                questions[index].description = updatedItemDescription;
-                questions[index].category = updatedItemCategory;
-                questions[index].complexity = updatedItemComplexity;
+            if (!dup && newItemName !== '' && newItemDescription !== '') {
+                questions.push({ name: newItemName, description: newItemDescription, category: newItemCategory, complexity: newItemComplexity });
+                itemNameInput.value = '';
+                itemDescriptionInput.value = '';
+                itemCategory.value = '';
+                itemComplexity = '';
                 renderItemList();
             }
         }
 
-        function deleteItem(index) {
-            const confirmDelete = confirm('Are you sure you want to delete this item?');
-            if (confirmDelete) {
-                questions.splice(index, 1);
-                renderItemList();
-            }
+        function view(i) {
+            const viewElem = document.getElementById('view');
+            const questionToView = questions[i];
+            viewElem.innerHTML = `
+            <h3>Title: ${questionToView.name}</h3>
+            <p>Current Question ID: ${i + 1}<p>
+            <div>${questionToView.description}</div>
+            <p>Current Question Category: ${questionToView.category}<p>
+            <p>Current Question Complexity: ${questionToView.complexity}<p>
+            `
         }
 
-        const questionForm = document.getElementById('questionForm');
-        questionForm.addEventListener('submit', addItem);
+    function editItem(index) {
+        let itemNameInput = document.getElementById('qtitle');
+        let itemDescriptionInput = document.getElementById('qdesc');
+        let itemCategory = document.getElementById('qcategory');
+        let itemComplexity = document.getElementById('qcomplexity');
+        const newItemName = itemNameInput.value.trim();
+        const newItemDescription = itemDescriptionInput.value;
+        const newItemCategory = itemCategory.value.trim();
+        const newItemComplexity = itemComplexity.value.trim();
+        let dup = false
+        questions.forEach((q, i) => {
+            if (i != index && q["name"] == newItemName) {
+            dup = true
+            return
+            }
+        })
+        if (dup) {
+            alert("Duplicate Question Title! Please try again")
+            var form = document.getElementById('questionForm')
+            form.removeEventListener('submit', editItem)
+            form.addEventListener('submit', addItem)
+            return
+        }
+        if (newItemName !== '' && newItemDescription !== '') {
+            questions[index] = { name: newItemName, description: newItemDescription, category: newItemCategory, complexity: newItemComplexity };
+            itemNameInput.value = '';
+            itemDescriptionInput.value = '';
+            itemCategory.value = '';
+            itemComplexity = '';
+            renderItemList();
+        }
+        document.getElementById('title').innerText = `Add Question`
+        var form = document.getElementById('questionForm')
+        form.removeEventListener('submit', editItem)
+        form.addEventListener('submit', addItem)
+    }
 
-        renderItemList();
-        </script>
-    </body>
+    function deleteItem(index) {
+        const confirmDelete = confirm('Are you sure you want to delete this item?');
+        if (confirmDelete) {
+            questions.splice(index, 1);
+            renderItemList();
+        }
+    }
+
+    const questionForm = document.getElementById('questionForm');
+    questionForm.addEventListener('submit', addItem);
+
+    renderItemList();
+    </script>
+</body>
 </html>
