--- a/src/question-bank.html
+++ b/src/question-bank.html
@@ -183,7 +183,7 @@
             viewElem.innerHTML = `
             <h3>Title: ${questionToView.name}</h3>
             <p>Current Question ID: ${i + 1}<p>
-            <div>${questionToView.description}</div>
+            <div style=white-space:pre-line; >${questionToView.description}</div>
             <p>Current Question Category: ${questionToView.category}<p>
             <p>Current Question Complexity: ${questionToView.complexity}<p>
             `
